--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Sejeong Park
-  image             : 
+  image             : assets/selfie.jpg
   email             : phw3218@gmail.com
   github            : sj3218
   linkedin          : sejeong-park98
