--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### Site Settings ###
 title               : Sejeong Park
 description         : >-
-                      안녕하세요! 박세정이라고 합니다 :wave:
+                      안녕하세요! 저는 박세정입니다 :wave:
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : sj3218/sj3218.github.io      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
