--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-  name              : Sejeong Park
+  name              : 박세정
   image             : assets/selfie.jpg
   email             : phw3218@gmail.com
   github            : sj3218
